--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <html>
 <head><title>Vila is back</title></head>
 <body>
-Vila is back
+
+<button>Click for get news</button>
+
+<h2 id="titleOfLegend"></h2>
+
+<script type="text/javascript">
+	function showTheLegend() {
+		document.getElementById('titleOfLegend').innerHTML = 'VILA IS BACK NOW IN 2015, THE LEGEND WILL BE CHAMPION';
+	}
+</script>
 
 </body>
 </html>
