--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <script type="text/javascript">
 	function showTheLegend() {
-		document.getElementById('titleOfLegend').innerHTML = 'VILA IS BACK NOW IN 2015, THE LEGEND WILL BE CHAMPION';
+		document.getElementById('titleOfLegend').innerHTML = 'VILA IS BACK NOW IN 2015, THE LEGEND WILL BE CHAMPION.';
 	}
 </script>
 
