Modifica texto da index.html e adiciona a acão ao botão.

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <head><title>Vila is back</title></head>
 <body>
 
-<button>Click for get news</button>
+<button onclick="showTheLegend()">Click for get news</button>
 
 <h2 id="titleOfLegend"></h2>
 
 <script type="text/javascript">
 	function showTheLegend() {
-		document.getElementById('titleOfLegend').innerHTML = 'VILA IS BACK NOW IN 2015, THE LEGEND WILL BE CHAMPION.';
+		document.getElementById('titleOfLegend').innerHTML = 'VILA IS BACK NOW IN 2015. IT\'S THE LEGEND. IT WILL BE CHAMPION.';
 	}
 </script>
 
