Modifica apresentação da index.

--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
 
 <h2 id="titleOfLegend"></h2>
 
+<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 <script type="text/javascript">
 	function showTheLegend() {
+		$('#titleOfLegend').hide();
 		document.getElementById('titleOfLegend').innerHTML = 'VILA IS BACK NOW IN 2015. IT\'S THE LEGEND. IT WILL BE CHAMPION.';
-	}
+		$('#titleOfLegend').show(2000);
+		
+	}	
 </script>
 
 </body>
