Modifica apresentação da index.

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 <script type="text/javascript">
 	function showTheLegend() {
 		$('#titleOfLegend').hide();
-		document.getElementById('titleOfLegend').innerHTML = 'VILA IS BACK NOW IN 2015. IT\'S THE LEGEND. IT WILL BE CHAMPION.';
+		$('#titleOfLegend').html('VILA IS BACK NOW IN 2015. IT\'S THE LEGEND. IT WILL BE CHAMPION.');
 		$('#titleOfLegend').show(2000);
-		
 	}	
 </script>
 
