--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
 
 <h2 id="titleOfLegend"></h2>
 
+<img style="display: none;" id="fatalityId" src="http://img1.wikia.nocookie.net/__cb20120806080609/mkwikia/images/6/6b/MKT_Fatality_Logo.gif"/>
+
 <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 <script type="text/javascript">
 	function showTheLegend() {
 		$('#titleOfLegend').hide();
 		$('#titleOfLegend').html('VILA IS BACK NOW IN 2015. IT\'S THE LEGEND. IT WILL BE CHAMPION.');
 		$('#titleOfLegend').show(2000);
+		$("#fatalityId").delay(1500).show(2000);
 	}	
 </script>
 
