--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <div style="display: none;background-color:#8B8682;width:100%;height:100%;" id="container">
 <button style="display: none;" onclick="showTheLegend()">Click for get news</button>
 
-<h2 style="display: none;" id="titleOfLegend"></h2>
+<h2 style="display: none;color:white;text-align:center;" id="titleOfLegend"></h2>
 
 <img style="
 display: none;text-align:center;
@@ -32,6 +32,7 @@ margin-left:-50px;" id="fatalityId" src="http://img1.wikia.nocookie.net/__cb2012
 	function executarFatality() {
 		$("#fatalityId").delay(1500).fadeIn(2000);
 		$("#container").delay(1500).fadeIn(2000);
+		showTheLegend();
 	}
 	
 	function isFatality() {
@@ -51,7 +52,7 @@ margin-left:-50px;" id="fatalityId" src="http://img1.wikia.nocookie.net/__cb2012
 
 	function showTheLegend() {
 		$('#titleOfLegend').hide();
-		$('#titleOfLegend').html('VILA IS BACK NOW IN 2015. IT\'S THE LEGEND. IT WILL BE CHAMPION.');
+		$('#titleOfLegend').html('VILA IS BACK NOW IN 2015. IT\'S THE LEGEND. IT IS CHAMPION.');
 		$('#titleOfLegend').show(2000);
 	}
 	
